--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "extends": "@tsconfig/node20/tsconfig.json",
-  "include": ["src", "tests/api.test.ts"],
+  "include": ["src", "tests"],
   "exclude": ["node_modules"],
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
+    "esModuleInterop": true,
   }
 }
