--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "daikon": "^1.2.45",
     "dicom-parser": "^1.8.21",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
