--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,6 @@
   "compilerOptions": {
     "outDir": "dist",
     "esModuleInterop": true,
-  }
+    "typeRoots": ["./node_modules/@types", "./types"],
+  },
 }
